--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Nothing You Can't Expect to See in a Arthur Vlog🤷🏻‍♂️😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">35 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Can we just keep it in the right now? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">36 minutes ago</div>
+                        <div class="date">47 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Ignite Wellbeing Within You | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">54 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Nearly got pantsd(sum) for she’s so handsome. Not my best #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US TRIPLE KILL</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Ignite Wellbeing Within You | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">54 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Nothing You Can't Expect to See in a Arthur Vlog🤷🏻‍♂️😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">35 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Can we just keep it in the right now? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">36 minutes ago</div>
+                            <div class="date">47 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Nearly got pantsd(sum) for she’s so handsome. Not my best #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10342,7 +10342,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US TRIPLE KILL</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
