--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Nothing You Can't Expect to See in a Arthur Vlog🤷🏻‍♂️😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Can we just keep it in the right now? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">47 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Ignite Wellbeing Within You | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">54 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - He’s such a superfan @ItalianBach #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Gyana Yoga as a Path to Inner Freedom</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - My EP ‘Missed Again’ out now!! This song is on it!!! #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>Use This Simple Practice to Quiet Mental Chatter | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -818,7 +818,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1016,7 +1016,7 @@
                     <div class="video-info">
                         <h3>The greatest gift you can offer another human being | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2547,7 +2547,7 @@
                     <div class="video-info">
                         <h3>Life Has No Meaning... And That’s Where Life Begins</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Passing the5ers Prop Firm Evaluation Live (Profit Update and new Expert Advisor)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Ignite Wellbeing Within You | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">54 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Gyana Yoga as a Path to Inner Freedom</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7997,7 +7997,7 @@
                         <div class="video-info">
                             <h3>Use This Simple Practice to Quiet Mental Chatter | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8129,7 +8129,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8217,7 +8217,7 @@
                         <div class="video-info">
                             <h3>The greatest gift you can offer another human being | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -8415,7 +8415,7 @@
                         <div class="video-info">
                             <h3>Life Has No Meaning... And That’s Where Life Begins</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Nothing You Can't Expect to See in a Arthur Vlog🤷🏻‍♂️😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Can we just keep it in the right now? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">47 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - He’s such a superfan @ItalianBach #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10287,7 +10287,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - My EP ‘Missed Again’ out now!! This song is on it!!! #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
