--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Fears to Fathom: Woodbury Getaway</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2657,7 +2657,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 22.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 23, 2025</div>
                     </div>
                 </a>
             </div>
@@ -6693,7 +6693,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 22.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 23, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>Fears to Fathom: Woodbury Getaway</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
